<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.profile.ProfileComponentFragment"
        android:background="@color/colorPrimary">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/Name"
            android:inputType="text"
            android:background="#FFFFFF"
            android:id="@+id/edittext_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/Age"
            android:inputType="number"
            android:background="#FFFFFF"
            android:id="@+id/edittext_age"
            android:maxLength="3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_name"
            app:layout_constraintStart_toStartOf="@+id/edittext_name"
            app:layout_constraintEnd_toEndOf="@+id/edittext_name"/>

    <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/edittext_age"
            app:layout_constraintStart_toStartOf="@+id/edittext_age"
            android:entries="@array/gender_list"
            app:layout_constraintEnd_toEndOf="@+id/edittext_age"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/spinner_method"
            android:layout_marginTop="16dp"/>

    <Spinner
            android:id="@+id/spinner_method"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_alignParentTop="true"
            android:background="#FFFFFF"
            android:entries="@array/commute_list"
            app:layout_constraintStart_toStartOf="@+id/spinner_gender"
            app:layout_constraintEnd_toEndOf="@+id/spinner_gender"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/Reason"
            android:inputType="text"
            android:background="#FFFFFF"
            android:id="@+id/edittext_reason"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_method"
            app:layout_constraintStart_toStartOf="@+id/spinner_method"
            app:layout_constraintEnd_toEndOf="@+id/spinner_method"/>

    <Button
            android:text="@string/Submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_reason"
            app:layout_constraintStart_toStartOf="@+id/edittext_reason"
            app:layout_constraintEnd_toEndOf="@+id/edittext_reason"
            android:background="@color/colorPrimaryDark"
            android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>