<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.routing.RoutingComponentFragment"
        android:background="@android:color/holo_green_light">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_confirm"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/destination"
                android:background="#FFFFFF"
                android:inputType="text"
                android:layout_alignStart="@+id/text_input_destination"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            app:layout_constraintTop_toBottomOf="@+id/text_input_destination"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/map"
            android:layout_marginBottom="5dp"/>

    <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_confirm">
    </org.osmdroid.views.MapView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>